--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,88 @@
-pandas
-numpy
-yfinance
-pyyaml
-scikit-learn
-statsmodels
-matplotlib
-seaborn
+# ============================================================
+# Aladdin-Risk-Mesh — Python Dependencies
+# Optimized for performance: Numba JIT, NumPy vectorization,
+# SciPy, PySpark, FastAPI, and Azure integrations.
+# Copyright (c) Venkatesh Vadaga. All Rights Reserved.
+# ============================================================
+
+# --- Core Numeric & Scientific Stack ---
+numpy>=1.26.0
+scipy>=1.12.0
+pandas>=2.2.0
+numba>=0.59.0
+cython>=3.0.0
+
+# --- Machine Learning ---
+scikit-learn>=1.4.0
+torch>=2.2.0
+transformers>=4.39.0
+xgboost>=2.0.0
+lightgbm>=4.3.0
+shap>=0.45.0
+
+# --- Quantitative Finance ---
+cvxpy>=1.4.0
+pyportfolioopt>=1.5.5
+arch>=6.3.0
+statsmodels>=0.14.0
+ta>=0.11.0
+yfinance>=0.2.37
+
+# --- API & Web ---
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
+httpx>=0.27.0
+pydantic>=2.7.0
+aioredis>=2.0.1
+
+# --- Data & Storage ---
+psycopg2-binary>=2.9.9
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+pyarrow>=15.0.0
+fastparquet>=2024.2.0
+
+# --- Distributed Computing ---
+pyspark>=3.5.0
+
+# --- MLOps & Monitoring ---
+mlflow>=2.12.0
+prometheus-client>=0.20.0
+opentelemetry-sdk>=1.23.0
+
+# --- Azure SDKs ---
+azure-identity>=1.16.0
+azure-storage-blob>=12.20.0
+azure-keyvault-secrets>=4.8.0
+
+# --- Airflow ---
+apache-airflow>=2.9.0
+apache-airflow-providers-microsoft-azure>=8.3.0
+
+# --- LLM Agent Layer ---
+langchain>=0.2.0
+langchain-openai>=0.1.0
+chromadb>=0.5.0
+sentence-transformers>=3.0.0
+openai>=1.25.0
+
+# --- Testing & Code Quality ---
+pytest>=8.2.0
+pytest-cov>=5.0.0
+pytest-asyncio>=0.23.0
+pytest-timeout>=2.3.0
+ruff>=0.4.0
+black>=24.4.0
+mypy>=1.10.0
+isort>=5.13.0
+
+# --- Utilities ---
+python-dotenv>=1.0.1
+loguru>=0.7.2
+rich>=13.7.0
+tqdm>=4.66.0
+click>=8.1.7
+pyyaml>=6.0.1
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.21.0
